Changes to how the applications are built and how the icon is displayed on linux at least.