@@ -14,6 +14,20 @@ dependencies {
     implementation project(':Shared')
 }
 
+// Project variables
+def projectJvmArgs = [
+        "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
+        "--illegal-access=permit",
+        "-Xmx256m"
+]
+
+def projectAppVersion = '0.9.2'
+
+def projectAppName = 'OpenRAMT-Client'
+
+def projectAppDescription = 'A client for the OpenRAMT server edition.'
+//
+
 javafx {
     modules = ['javafx.controls', 'javafx.fxml']
     version = '15.0.1'
@@ -21,7 +35,7 @@ javafx {
 
 application {
     mainClass.set("application.Launcher")
-    applicationName = 'OpenRAMT'
+    applicationName = projectAppName
 }
 
 run {
@@ -36,6 +50,7 @@ compileJava {
 }
 
 runtime {
+
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
     launcher {
         noConsole = true
@@ -43,25 +58,38 @@ runtime {
                 "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
                 "--illegal-access=permit"
         ]
-    }
-    jpackage {
-        def currentOs = org.gradle.internal.os.OperatingSystem.current()
-        def imgType = currentOs.windows ? 'ico' : currentOs.macOsX ? 'icns' : 'png'
-        imageOptions += ['--icon', "src/main/resources/openramt.$imgType"]
-        appVersion = "0.0.1"
-        installerOptions += ['--resource-dir', "src/main/resources"]
-        installerOptions += ['--vendor', 'Nex']
-        if(currentOs.windows) {
-            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
-            installerType = 'msi'
-        }
-        else if (currentOs.linux) {
-            installerOptions += ['--linux-package-name', applicationName,'--linux-shortcut']
-            installerType = 'deb'
-        }
-        else if (currentOs.macOsX) {
-            installerOptions += ['--mac-package-name', applicationName]
-            installerType = 'dmg'
+        jpackage {
+            def currentOs = org.gradle.internal.os.OperatingSystem.current()
+            def imgType = currentOs.windows ? 'ico' : currentOs.macOsX ? 'icns' : 'png'
+            imageOptions += ['--icon', "src/main/resources/openramt.$imgType"]
+            installerOptions += ['--vendor', 'Nex-Coder']
+            installerOptions += ['--resource-dir', "build/jpackage/OpenRAMT-Server/lib"]
+            imageName = projectAppName // Should be the same
+            installerName = projectAppName
+            appVersion = projectAppVersion
+            //imageOutputDir = ''
+            //installerOutputDir = ''
+            //skipInstaller = true // create just app image
+
+            if(currentOs.windows) {
+                installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
+                installerType = 'msi'
+            }
+            else if (currentOs.linux) {
+                installerOptions += [
+                        '--linux-menu-group', 'Utility',
+                        '--description', projectAppDescription,
+                        '--app-version', projectAppVersion,
+                        '--linux-shortcut',
+                        '--linux-deb-maintainer', 'nex@nexhub.co.uk',
+                        '--linux-rpm-license-type', 'MIT',
+                ]
+                installerType = 'deb'
+            }
+            else if (currentOs.macOsX) {
+                installerOptions += ['--mac-package-name', projectAppName]
+                installerType = 'dmg'
+            }
         }
     }
 }
